--- a/src/app.scss
+++ b/src/app.scss
@@ -30,20 +30,16 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat';
-    background-color: #f5f5f5
+    background-color: #f5f5f5;
+    height: 100%;
+    width: 100%;
 }
 
 @import 'scss/components/components.scss';
 
-// @import 'scss/framework/colors.scss';
-// @import 'scss/framework/container.scss';
-// @import 'scss/framework/blocks.scss';
-// @import 'scss/framework/blocks-double.scss';
-// @import 'scss/framework/blocks-triple.scss';
-// @import 'scss/framework/blocks-quad.scss';
-
 @import 'scss/home/jumbo.scss';
-@import 'scss/home/navbar.scss';
-@import 'scss/home/actionbar.scss';
+@import 'scss/home/navigation-bar.scss';
+@import 'scss/home/action-bar.scss';
 @import 'scss/home/our-values.scss';
 @import 'scss/home/footer.scss';
+@import 'scss/home/mobile-bar.scss';
