--- a/src/scss/home/jumbo.scss
+++ b/src/scss/home/jumbo.scss
@@ -1,4 +1,8 @@
 
+// Mobile Devices
+// Extra small <576px  = 100%
+// Small       ≥576px  = 540px
+
 body > header {
     background-image: url('img/header.svg');
     background-color: #f3edeb;
@@ -8,91 +12,101 @@ body > header {
     height: 550px;
     text-align: center;
     position: relative;
+    padding-top: 50px;
 
-    & h1,
-    & h2 {
-        position: absolute;
-        top: 0;
-        display: none;
-        margin:0;
-        text-align: left;
-        color: $text-primary;
-        font-size: 24px;
-        font-family: 'Montserrat';
-        transition: all .5s;
-    }
-
-    & h1 {
-        font-weight: bold;
-    }
-
-    & button {
-        display: block;
-        position: absolute;
-        bottom: 100px;
-        left: 50%;
-        margin: 0;
-        margin-left: -125px;
-        text-align: left;
-        text-decoration: none;
-        color: $text-primary;
-        font-size: 16px;
-        font-family: 'Montserrat';
-        width: 250px;
-        
-        background-color: rgba(255, 255, 255, .9);
-        border-radius: 40px;
-        border-width: 0;
-        cursor: pointer;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, .1);
-
-        & i {
-            margin: 20px 0;
-        }
-
-        &:hover {
-            background-color: lighten($text-primary, 10%);
-            color: #fff;
-        }
-    }
-}
-
-@media (max-width:510px) { 
-    body > header {
-        padding-top: 50px;
-    }
-}
-
-@media (min-width:510px) { 
-    body > header {
-        & h1 {
-            top: 260px;
-            display: block;
-            width: 40%;
-            font-size: 24px;
-        }
-
-        & button {
-            bottom: 120px;
-            font-size: 16px;
-            margin-left: 0;
-        }
+    & .wrap {
+        margin-top: -260px;
+        transition: width .5s;
 
         & h1,
-        & h2,
+        & h2 {
+            font-size: 24px;
+            font-family: 'Montserrat';
+            color: $text-primary;
+            font-size: 24px;
+            width: 40%;
+            text-align: left;
+            padding-left: 30px;
+        }
+
+        & h1 {
+            font-weight: 700;
+            margin-bottom: 50px;
+        }
+
+        & h2 {
+            display: none;
+        }
+
         & button {
-            left: 5%;
+            display: block;
+            margin: 0;
+            text-align: left;
+            text-decoration: none;
+            color: $text-primary;
+            font-size: 16px;
+            font-family: 'Montserrat';
+            width: 250px;
+            margin-left: 20px;
+            
+            background-color: rgba(255, 255, 255, .9);
+            border-radius: 40px;
+            border-width: 0;
+            cursor: pointer;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, .1);
+
+            & i {
+                margin: 20px 0;
+            }
+
+            &:hover {
+                background-color: lighten($text-primary, 10%);
+                color: #fff;
+            }
         }
     }
 }
 
-@media (min-width:800px) { 
+@media (min-width:576px) { 
+    body > header {
+        padding-top: 0;
+
+        & .wrap {
+            margin-top: -230px;
+
+            & h1,
+            & h2 {
+                width: 50%;
+                text-align: left;
+                padding: 5px 40px;
+                padding-left: 10px;
+                background-color: transparent;
+            }
+
+            & h1 {
+                margin-bottom: 40px;
+            }
+
+            & button {
+                margin-left: 0;
+            }
+        }
+    }
+}
+
+// Tablet Devices
+// Medium      ≥768px  = 720px
+
+@media (min-width:768px) { 
     body > header {
         height: 650px;
 
-        & h1 {
-            top: 360px;
-            font-size: 28px;
+        & .wrap {
+            margin-top: -280px;
+    
+            & h1 {
+                font-size: 28px;
+            }
         }
     }
 }
@@ -101,31 +115,25 @@ body > header {
     body > header {
         height: 800px;
 
-        & h1 {
-            top: 420px;
-            font-size: 32px;
-            width: 30%;
-        }
+        & .wrap {
+            margin-top: -380px;
+    
+            & h1,
+            & h2 {
+                width: 45%;
+            }
 
-        & h2 {
-            display: block;
-            top: 520px;
-            font-size: 16px;
-            width: 40%;
-            font-weight: 300;
-        }
-    }
-}
+            & h1 {
+                font-size: 32px;
+                margin-bottom: 20px;
+            }
 
-@media (min-width:1310px) { 
-    body > header {
-        & h1,
-        & h2,
-        & button {
-            left: 10%;
+            & h2 {
+                display: block;
+                font-size: 16px;
+                font-weight: 300;
+                margin-bottom: 40px;
+            }
         }
     }
 }
-
-
-
