--- a/src/scss/home/header.scss
+++ b/src/scss/home/header.scss
@@ -40,6 +40,7 @@ body > header {
 
         & button {
             display: block;
+            position: relative;
             margin: 0;
             text-align: left;
             text-decoration: none;
