--- a/src/scss/navigation-bar.scss
+++ b/src/scss/navigation-bar.scss
@@ -31,7 +31,7 @@ nav.navigation-bar {
                 padding: 0;
                 text-decoration: none;
                 font-family: 'Montserrat';
-                font-size: 18px;
+                font-size: 16px;
                 color: #2a475d;
             }
         }
@@ -103,6 +103,12 @@ nav.navigation-bar {
 
 @media (min-width:576px) { 
     nav.navigation-bar  {
+        & ul li {
+            & a {
+                font-size: 18px;
+            }
+        }
+        
         & ul:last-child {
             & li {
                 display: block;
