Configuração do template engine handlebars

--- a/src/footer.hbs
+++ b/src/footer.hbs
@@ -4,7 +4,7 @@
             <img src="img/logo-footer.png">
 
             <div class="column-one">
-                <h2>Regenera Cuidado</h2>
+                <h2>Regenera Cuidado {{ htmlWebpackPlugin.options.title }}</h2>
 
                 <p class="address">
                     <i class="fa-solid fa-car-side"></i>
