--- a/src/header-home.hbs
+++ b/src/header-home.hbs
@@ -9,6 +9,8 @@
     <div class="holder">
         <section class="wrap">
             <h1>
+                {{ htmlWebpackPlugin.options.title }}
+                
                 Curamos suas feridas muito mais rápido
             </h1>
 
