--- a/src/scss/mobile-menu.scss
+++ b/src/scss/mobile-menu.scss
@@ -68,9 +68,9 @@ nav.mobile-menu {
                     text-align: center;
                 }
 
-                & span.optional {
-                    display: none;
-                }
+                // & span.optional {
+                //     display: none;
+                // }
             }
         }
     }
