--- a/src/footer.hbs
+++ b/src/footer.hbs
@@ -9,38 +9,34 @@
                 <p class="address">
                     <i class="fa-solid fa-car-side"></i>
 
-                    <span>Rua das acácias, 258, </span>
+                    <span>{{ address }}, </span>
 
-                    <span class="new-line">12578-665, Jacareí, SP</span>
+                    <span class="new-line">{{ cep }}, {{ city }}</span>
                 </p>
 
                 <p class="phone">
                     <i class="fa-solid fa-phone-volume"></i>
 
-                    <span>(99) 9 9999-99</span>
+                    <span>{{ phone }}</span>
                 </p>
 
                 <p class="email">
                     <i class="fa-solid fa-envelope"></i>
 
-                    <span>contato@regeneracuidado.com.br</span>
+                    <span>{{ email }}</span>
                 </p>
             </div>
 
             <div class="column-two">
-                <a href="">Sobre Nós</a>
-                <a href="">Nossa História</a>
-                <a href="">Nosso Trabalho</a>
-                <a href="">Departamentos</a>
-                <a href="">Blog</a>
+                {{#each footerLinksOne}}
+                    <a href="{{ this.url }}">{{ this.label }}</a>
+                {{/each}}
             </div>
 
             <div class="column-three">
-                <a href="">Fale conosco</a>
-                <a href="">Depoimentos</a>
-                <a href="">FAQ</a>
-                <a href="">Privacidade</a>
-                <a href="">Termos e Condições</a>
+                {{#each footerLinksTwo}}
+                    <a href="{{ this.url }}">{{ this.label }}</a>
+                {{/each}}
             </div>
         </div>
     </section>
@@ -51,26 +47,18 @@
         <div class="social">
             <span>Siga-nos</span>
 
-            <a href="#">
-                <i class="fa-brands fa-facebook fa-xl"></i>
-                <span>Facebook</span>
-            </a>
-
-            <a href="@regenera.cuidado">
-                <i class="fa-brands fa-instagram fa-xl"></i>
-                <span>Instagram</span>
-            </a>
-
-            <a href="#">
-                <i class="fa-brands fa-youtube fa-xl"></i>
-                <span>Youtube</span>
-            </a>
+            {{#each socialLinks}}
+                <a href="{{ this.url }}">
+                    <i class="fa-brands {{ this.icon }} fa-xl"></i>
+                    <span>{{ this.label }}</span>
+                </a>
+            {{/each}}
         </div>
 
         <div class="copy">
             Copyright &copy; 
-            2024 
-            Regenera Cuidado
+            {{ currentYear }}
+            {{ siteName }}
             <span>Todos os direitos reservados.</span>
         </div>
     </section>
