--- a/src/view/common/navigation-bar.hbs
+++ b/src/view/common/navigation-bar.hbs
@@ -13,7 +13,7 @@
     <ul>
         {{#each socialLinks}}
             <li>
-                <a href="{{ this.url }}">
+                <a href="{{ this.url }}" target="_blank">
                     <i class="fa-brands {{ this.icon }} fa-xl"></i>
                     <span>{{ this.label }}</span>
                 </a>
