--- a/src/view/index/departments.hbs
+++ b/src/view/index/departments.hbs
@@ -2,15 +2,15 @@
 
 <div class="holder departments">
     <section class="wrap box-triple-static">
-        <div data-link="{{ pageHomeCare.link }}">
+        <div class="autolink" data-link="{{ pageHomeCare.link }}">
             <img src="img/department-homecare.png">
         </div>
 
-        <div data-link="{{ pageWounds.link }}">
+        <div class="autolink" data-link="{{ pageWounds.link }}">
             <img src="img/department-wounds.png">
         </div>
 
-        <div data-link="{{ pageConsultancy.link }}">
+        <div class="autolink" data-link="{{ pageConsultancy.link }}">
             <img src="img/department-consultancy.png">
         </div>
     </section>
