--- a/src/view/index/header.hbs
+++ b/src/view/index/header.hbs
@@ -1,4 +1,4 @@
-<header class="homecare">
+<header>
     <picture>
         <source srcset="img/header-iphone.png" media="(max-width: 575px)" />
         <source srcset="img/header-ipad.png" media="(max-width: 767px)" />
