--- a/src/view/index/page.hbs
+++ b/src/view/index/page.hbs
@@ -8,7 +8,7 @@
         {{> ../common/meta }}
     </head>
 
-    <body class="homecare">
+    <body class="index">
         {{> header }}
 
         {{> ../common/navigation-bar }}
