--- a/src/view/our-story/page.hbs
+++ b/src/view/our-story/page.hbs
@@ -8,7 +8,7 @@
         {{> ../common/meta }}
     </head>
 
-    <body class="consultancy">
+    <body class="our-story">
         {{> ../common/header-page }}
 
         {{> ../common/contact-bar }}
