--- a/src/view/testimonials/content.hbs
+++ b/src/view/testimonials/content.hbs
@@ -1,39 +1,79 @@
 <div class="holder">
     <article class="wrap">
-        <h1>Porquê nosso trabalho é diferente</h1>
+        <h2>Porquê nosso trabalho é diferente?</h2>
 
-        <h2>Subtítulo</h2>
-
-        <picture class="right">
-            <img src="img/page-wounds.png">
-        </picture>
+        <h3>José <small>pé diabético</small></h3>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Excelente profissional a que me acompanhou, sempre preocupada com o 
+            bem estar do paciente. Excelência no tratamento de ferida.
         </p>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Sou diabético e precisei fazer um tratamento pós cirurgia de 
+            amputação e minha recuperação com o tratamento foi bem acima da média. 
+            São profissionais dedicados que amam o que fazem, por isso os 
+            resultados de cicatrização foram os melhores e em tempo recorde!
         </p>
 
-        <h2>Subtítulo</h2>
+        <h3>Raquel <small>lesão por trauma</small></h3>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Quando me vi numa situação desconhecida, dolorosa e ainda por cima 
+            com um longo processo de recuperação, isso foi muito assustador. Ter 
+            encontrado a <strong>Regenera</strong> nesse momento foi um alento. 
         </p>
 
-        <h2>Subtítulo</h2>
+        <p>
+            Seu profissionalismo regado com uma humanidade indubitável fizeram 
+            toda a diferença. Meu sempre muito obrigada por tudo. Ela tornou meu
+            tratamento mais leve e isso valeu tanto que não consigo traduzir 
+            em palavras.
+        </p>
+        
+        <p>
+            Fica aqui meu muito obrigada e minha indicação de uma referência de 
+            tratamento de cicatrização a quem puder indicar.            
+        </p>
+
+        <h3>Janaína <small>filha de paciente com lesão por trauma</small></h3>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            A pessoa que acompanhou minha mãe é uma excelente profissional, de 
+            um conhecimento, competência e amor gigantesco pelo que faz. 
+        </p>
+
+        <p>
+            Sinto gratidão eterna por nossos caminhos se terem cruzados, agradeço 
+            muito sua competência enquanto enfermeira, mas também pela pessoa
+            atenciosa e gentil que foi comigo e com minha mãe quando mais precisamos.
+        </p>
+
+        <h3>Regina <small>lesões vasculogênicas</small></h3>
+
+        <p>
+            Fui diagnosticada com trombose venosa profunda e erisipela bolhosa 
+            das mais agressivas, fiquei hospitalizada por 22 dias, e ao ter alta 
+            no hospital tínhamos que curar as lesões que a infecção causou. 
+            Foi quando nos indicaram Dra Maria Teresa e o tratamento se iniciou. 
+        </p>
+
+        <p>
+            As lesões foram fechando e em 6 meses estava totalmente cicatrizado. 
+            Por isso declaro que o profissionalismo, experiência e total dedicação 
+            da <strong>Regenera</strong>, foram fundamentais para minha cura.
+        </p>
+
+        <h3>Gabriela <small>filha de paciente com lesão de deiscência na mama</small></h3>
+
+        <p>
+            Profissionais muito dedicados, diferente de muitos que vemos por aí.
+            Realmente se preocupam com o paciente e entendem que ele é uma vida 
+            e valorizam isso.
+        </p>
+
+        <p>
+            Somente gratidão.
         </p>
     </article>
 </div>
