--- a/src/view/conditions/content.hbs
+++ b/src/view/conditions/content.hbs
@@ -1,39 +1,132 @@
 <div class="holder">
     <article class="wrap">
-        <h1>Porquê nosso trabalho é diferente</h1>
-
-        <h2>Subtítulo</h2>
-
-        <picture class="right">
-            <img src="img/page-wounds.png">
-        </picture>
-
+        <h2>1. Termos</h2>
+        
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Ao acessar ao site 
+            <a href="https://www.regeneracuidado.com.br/">Regenera Cuidado</a>, 
+            concorda em cumprir estes termos de serviço, todas as leis e 
+            regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento 
+            de todas as leis locais aplicáveis. Se você não concordar com algum 
+            desses termos, está proibido de usar ou acessar este site. 
+            Os materiais contidos neste site são protegidos pelas leis de direitos 
+            autorais e marcas comerciais aplicáveis.
         </p>
-
+        
+        <h2>2. Uso de Licença</h2>
+        
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            É concedida permissão para baixar temporariamente uma cópia dos 
+            materiais (informações ou software) no site Regenera Cuidado, apenas 
+            para visualização transitória pessoal e não comercial. Esta é a 
+            concessão de uma licença, não uma transferência de título e, sob 
+            esta licença, você não pode:
         </p>
+        
+        <ul>
+            <li>modificar ou copiar os materiais;</li>
 
-        <h2>Subtítulo</h2>
-
+            <li>
+                usar os materiais para qualquer finalidade comercial ou para 
+                exibição pública (comercial ou não comercial);
+            </li>
+            
+            <li>
+                tentar descompilar ou fazer engenharia reversa de qualquer 
+                software contido no site Regenera Cuidado;
+            </li>
+            
+            <li>
+                remover quaisquer direitos autorais ou outras notações de 
+                propriedade dos materiais; ou
+            </li>
+            
+            <li>
+                transferir os materiais para outra pessoa ou 'espelhe' os 
+                materiais em qualquer outro servidor.
+            </li>
+        </ul>
+        
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Esta licença será automaticamente rescindida se você violar alguma 
+            dessas restrições e poderá ser rescindida por Regenera Cuidado a 
+            qualquer momento. Ao encerrar a visualização desses materiais ou 
+            após o término desta licença, você deve apagar todos os materiais 
+            baixados em sua posse, seja em formato eletrónico ou impresso.
         </p>
-
-        <h2>Subtítulo</h2>
-
+        
+        <h2>3. Isenção de responsabilidade</h2>
+        
+        <ul>
+            <li>
+                Os materiais no site da Regenera Cuidado são fornecidos 
+                'como estão'. Regenera Cuidado não oferece garantias, expressas 
+                ou implícitas, e, por este meio, isenta e nega todas as outras 
+                garantias, incluindo, sem limitação, garantias implícitas ou 
+                condições de comercialização, adequação a um fim específico ou 
+                não violação de propriedade intelectual ou outra violação de 
+                direitos.
+            </li>
+            
+            <li>
+                Além disso, o Regenera Cuidado não garante ou faz qualquer 
+                representação relativa à precisão, aos resultados prováveis ​​ou 
+                à confiabilidade do uso dos materiais em seu site ou de outra 
+                forma relacionado a esses materiais ou em sites vinculados a 
+                este site.
+            </li>
+        </ul>
+        
+        <h2>4. Limitações</h2>
+        
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Em nenhum caso o Regenera Cuidado ou seus fornecedores serão 
+            responsáveis ​​por quaisquer danos (incluindo, sem limitação, danos 
+            por perda de dados ou lucro ou devido a interrupção dos negócios) 
+            decorrentes do uso ou da incapacidade de usar os materiais em 
+            Regenera Cuidado, mesmo que Regenera Cuidado ou um representante 
+            autorizado da Regenera Cuidado tenha sido notificado oralmente ou 
+            por escrito da possibilidade de tais danos. Como algumas jurisdições 
+            não permitem limitações em garantias implícitas, ou limitações de 
+            responsabilidade por danos conseqüentes ou incidentais, essas 
+            limitações podem não se aplicar a você.
+        </p>
+        
+        <h2>5. Precisão dos materiais</h2>
+        
+        <p>
+            Os materiais exibidos no site da Regenera Cuidado podem incluir 
+            erros técnicos, tipográficos ou fotográficos. Regenera Cuidado não 
+            garante que qualquer material em seu site seja preciso, completo ou 
+            atual. Regenera Cuidado pode fazer alterações nos materiais contidos 
+            em seu site a qualquer momento, sem aviso prévio. No entanto, Regenera 
+            Cuidado não se compromete a atualizar os materiais.
+        </p>
+        
+        <h2>6. Links</h2>
+        
+        <p>
+            O Regenera Cuidado não analisou todos os sites vinculados ao seu 
+            site e não é responsável pelo conteúdo de nenhum site vinculado. 
+            A inclusão de qualquer link não implica endosso por Regenera Cuidado 
+            do site. O uso de qualquer site vinculado é por conta e risco do 
+            usuário.
+        </p>
+        
+        <h3>Modificações</h3>
+        
+        <p>
+            O Regenera Cuidado pode revisar estes termos de serviço do site a 
+            qualquer momento, sem aviso prévio. Ao usar este site, você concorda 
+            em ficar vinculado à versão atual desses termos de serviço.
+        </p>
+        
+        <h2>Lei aplicável</h2>
+        
+        <p>
+            Estes termos e condições são regidos e interpretados de acordo com 
+            as leis do Regenera Cuidado e você se submete irrevogavelmente à 
+            jurisdição exclusiva dos tribunais naquele estado ou localidade.
         </p>
     </article>
 </div>
