--- a/src/view/wounds/content.hbs
+++ b/src/view/wounds/content.hbs
@@ -1,39 +1,39 @@
 <div class="holder">
     <article class="wrap">
-        <h1>Porquê nosso trabalho é diferente</h1>
+        <h2>Mono monomon monom mono mon momonomo</h2>
 
-        <h2>Subtítulo</h2>
+        <h3>Monomon monom mono</h3>
 
         <picture class="right">
             <img src="img/page-wounds.png">
         </picture>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo
         </p>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo
         </p>
 
-        <h2>Subtítulo</h2>
+        <h3>Monomon monom mono</h3>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo
         </p>
 
-        <h2>Subtítulo</h2>
+        <h3>Monomon monom mono</h3>
 
         <p>
-            Estamos à disposição e ficamos muito felizes com seu contato e também 
-            sua visita. Venha tomar um café e descobrir como podemos auxiliar em um 
-            tratamento de qualidade.
+            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo monomon monom mono mon momonomo
+            monomon monom mono mon momonomo
         </p>
     </article>
 </div>
